--- a/angular/view/home.html
+++ b/angular/view/home.html
@@ -1,3 +1,3 @@
 <div id="home">
-	<img src="img/back.imh.jpg" height="100%">	
+	<img src="img/back.imh.jpg" height="100%" class="img-responcive">	
 </div>
