--- a/css/main.css
+++ b/css/main.css
@@ -12,4 +12,18 @@ body {
 #home {
 	background: url(../img/back.imh.jpg);
 	background-size: cover;
+	display: table;
+	height: 100%;
+	width: 100%;
+}
+
+#child {
+	display: table-cell;
+	vertical-align: middle;
+	color: white;
+}
+
+#child>h2 {
+	white-space: nowrap;
+	font-size: 5vw;
 }
