--- a/css/main.css
+++ b/css/main.css
@@ -13,8 +13,8 @@ body {
 	background: url(../img/back.imh.jpg);
 	background-size: cover;
 	display: table;
-	height: 100%;
-	width: 100%;
+	height: 100vh;
+	width: 100vw;
 }
 
 #child {
