--- a/angular/view/home.html
+++ b/angular/view/home.html
@@ -2,6 +2,6 @@
 	<div class="text-center" id="child">
 		<h2>Explore to your desires</h2>
 		<h3>Find your favorite house or Character.</h3>
-		<button type="button" class="btn btn-outline-light btn-lg" ui-sref="Search">Get Started</button>		
+		<button type="button" class="btn btn-outline-light btn-lg" ui-sref="Search" style="color: black">Get Started</button>		
 	</div>
 </div>
