--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,8 @@ body {
 #child {
 	display: table-cell;
 	vertical-align: middle;
-	color: hsl(216, 61%, 38%);
+	color: white;
+	text-shadow: 1px 1px 2px black; 
 }
 
 #child>h2 {
