--- a/angular/view/home.html
+++ b/angular/view/home.html
@@ -1,4 +1,4 @@
-<div id="home" ng-controller='homeCOntroller as myHome'>
+<div id="home" ng-controller='homeController as myHome'>
 	<div class="text-center" id="child">
 		<h2>Explore to your desires</h2>
 		<h3>Find your favorite house or Character.</h3>
