--- a/angular/view/home.html
+++ b/angular/view/home.html
@@ -3,19 +3,17 @@
 		<h2>Explore to your desires</h2>
 		<h3>Find your favorite house or Character.</h3>		
 		<div class="btn-group" uib-dropdown>
-			<button id="split-button" type="button" class="btn btn-danger">Action</button>
-			<button type="button" class="btn btn-danger" uib-dropdown-toggle>
-				<span class="caret"></span>
-				<span class="sr-only">Split button!</span>
-			</button>
-			<ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="split-button">
-				<li role="menuitem"><a href="#">Action</a></li>
-				<li role="menuitem"><a href="#">Another action</a></li>
-				<li role="menuitem"><a href="#">Something else here</a></li>
-				<li class="divider"></li>
-				<li role="menuitem"><a href="#">Separated link</a></li>
-			</ul>
-			<button id="split-button" type="button" class="btn btn-danger">Action</button>
+			<div class="btn-group" uib-dropdown is-open="status.isopen">
+				<button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
+					{{myHome.action}} <span class="caret"></span>
+				</button>
+				<ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+					<li role="menuitem"><a ng-model="myHome.action">Books</a></li>
+					<li role="menuitem"><a ng-model="myHome.action">Houses</a></li>
+					<li role="menuitem"><a ng-model="myHome.action">Characters</a></li>
+				</ul>
+			</div>
+			<button id="split-button" type="button" class="btn btn-danger">{{myHome.filter}}</button>
 			<button type="button" class="btn btn-danger" uib-dropdown-toggle>
 				<span class="caret"></span>
 				<span class="sr-only">Split button!</span>
