--- a/angular/view/home.html
+++ b/angular/view/home.html
@@ -25,7 +25,7 @@
 				<li class="divider"></li>
 				<li role="menuitem"><a href="#">Separated link</a></li>
 			</ul>
-			<input type="text" ng-model="myTypeahead.selected" uib-typeahead="result as result.name for result in myTypeahead.search | filter:$viewValue | limitTo:8"  class="form-control">
+			<input type="text" ng-model="myTypeahead.selected" uib-typeahead="result as result.name for result in myTypeahead.search | filter:$viewValue | limitTo:8">
 		</div>
 	</div>
 </div>
