--- a/angular/view/home.html
+++ b/angular/view/home.html
@@ -13,8 +13,8 @@
 					<li role="menuitem"><a ng-click='myHome.buttonName("Characters")'>Characters</a></li>
 				</ul>
 			</div>
-			<div class="btn-group" uib-dropdown is-open="status.isopen">
-				<button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
+			<div class="btn-group" uib-dropdown>
+				<button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle>
 					{{myHome.filter}} <span class="caret"></span>
 				</button>
 				<ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
