--- a/angular/view/home.html
+++ b/angular/view/home.html
@@ -22,7 +22,7 @@
 					<li role="menuitem" ng-repeat='filter in myHome.filters' ng-click='myHome.filtername($index)'><a>{{filter}}</a></li>
 				</ul>
 			</div>
-			<input type="text" ng-model="myHome.selected" uib-typeahead="result as result.name for result in myHome.search | filter:$viewValue | limitTo:8" class="form-control"> 
+			<input type="text" ng-attr-placeholder="{{myHome.actionDone}}" ng-model="myHome.selected" uib-typeahead="result as result.name for result in myHome.search | filter:$viewValue | limitTo:5" class="form-control"> 
 		</div>
 	</div>
 </div>
