--- a/angular/view/home.html
+++ b/angular/view/home.html
@@ -13,16 +13,8 @@
 					<li role="menuitem"><a ng-click='myHome.buttonName("Characters")'>Characters</a></li>
 				</ul>
 			</div>
-			<div class="btn-group" uib-dropdown>
-				<button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle>
-					{{myHome.filter}} <span class="caret"></span>
-				</button>
-				<ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
-					<li style="color: black;">{{myHome.actionDone}}</li>
-					<li role="menuitem" ng-repeat='filter in myHome.filters' ng-click='myHome.filtername($index)'><a>{{filter}}</a></li>
-				</ul>
-			</div>
-			<input type="text" ng-attr-placeholder="{{myHome.actionDone}}" ng-model="myHome.selected" uib-typeahead="result as result.name for result in myHome.search | filter:$viewValue | limitTo:5" class="form-control" style="color: black;"> 
+			<input type="text" placeholder="Search" ng-model="myHome.selected" uib-typeahead="result as result.name for result in myHome.search | filter:$viewValue | limitTo:5" class="form-control" style="color: black;"> 
 		</div>
+		<div><pre> {{myHome.selected}} </pre></div>
 	</div>
 </div>
