--- a/angular/view/search.html
+++ b/angular/view/search.html
@@ -1,6 +1,6 @@
 <div id="search" ng-controller="searchController as mySearch">
 	<div class="container">
-		<h2>Search : </h2>
+		<h2>Search :{{mySearch.query}} </h2>
 		
 	</div>
 </div>
