--- a/angular/view/home.html
+++ b/angular/view/home.html
@@ -2,8 +2,8 @@
 	<div class="text-center" id="child">
 		<h2>Explore to your desires</h2>
 		<h3>Find your favorite house or Character.</h3>		
-		<div class="btn-group" uib-dropdown id="btn-group">
-			<div class="btn-group" uib-dropdown is-open="status.isopen">
+		<div class="input-group" uib-dropdown id="btn-group">
+			<div class="input-group-btn" uib-dropdown is-open="status.isopen">
 				<button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
 					{{myHome.action}} <span class="caret"></span>
 				</button>
