--- a/css/main.css
+++ b/css/main.css
@@ -30,8 +30,11 @@ body {
 
 #btn-group {
 	text-shadow: 0px 0px 0px;
+	width: 50%;
+	margin: 0% 25%;
 }
 
-input {
-	width: 100%;
+#searchInput {
+	color: black;
+	width: 70%;
 }
