--- a/angular/view/home.html
+++ b/angular/view/home.html
@@ -14,7 +14,7 @@
 				</ul>
 			</div>
 			<input type="text" placeholder="Search" ng-model="myHome.selected" uib-typeahead="result as result.name for result in myHome.search | filter:$viewValue | limitTo:5" class="form-control" id="searchInput"> 
-			<button type="button" class="btn btn-default" ui-sref= 'search({q : myHome.selected.url})'>Search</button>
 		</div>
+		<button type="button" class="btn btn-default center-block" ui-sref= 'search({q : myHome.selected.url})'>Search</button>
 	</div>
 </div>
