--- a/angular/view/search.html
+++ b/angular/view/search.html
@@ -1,6 +1,14 @@
 <div id="search" ng-controller="searchController as mySearch">
 	<div class="container">
-		<h2>Search :{{mySearch.query}} </h2>
-		
+		<h2>Search : {{mySearch.query}} </h2>
+		<nav class="navbar navbar-inverse">
+			<form class="navbar-form navbar-left">
+				<div class="form-group">
+					<input type="text" class="form-control" placeholder="Search">
+				</div>
+				<button type="submit" class="btn btn-default">Searcht</button>
+			</form>
+		</nav>
+
 	</div>
 </div>
