--- a/angular/view/search.html
+++ b/angular/view/search.html
@@ -2,11 +2,29 @@
 	<div class="container">
 		<h2>Search : {{mySearch.query}} </h2>
 		<nav class="navbar navbar-inverse">
+			<div class="input-group-btn" uib-dropdown is-open="status.isopen">
+				<button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
+					{{mySearch.action}} <span class="caret"></span>
+				</button>
+				<ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+					<li role="menuitem"><a ng-click='mySearch.buttonName("Books")'>Books</a></li>
+					<li role="menuitem"><a ng-click='mySearch.buttonName("Houses")'>Houses</a></li>
+					<li role="menuitem"><a ng-click='mySearch.buttonName("Characters")'>Characters</a></li>
+				</ul>
+			</div>
+			<div class="input-group-btn" uib-dropdown is-open="status.isopen">
+				<button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
+					{{mySearch.filter}} <span class="caret"></span>
+				</button>
+				<ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+					<li role="menuitem" ng-repeat="filter in mySearch.filters"><a ng-click='mySearch.filterSelected()' ng-model="mySearch.filter">{{filter}} </a></li>
+				</ul>
+			</div>
 			<form class="navbar-form navbar-left">
 				<div class="form-group">
 					<input type="text" class="form-control" placeholder="Search">
 				</div>
-				<button type="submit" class="btn btn-default">Searcht</button>
+				<button type="submit" class="btn btn-default">Search</button>
 			</form>
 		</nav>
 
