--- a/angular/view/search.html
+++ b/angular/view/search.html
@@ -12,14 +12,7 @@
 					<li role="menuitem"><a ng-click='mySearch.buttonName("Characters")'>Characters</a></li>
 				</ul>
 			</div>
-			<div class="input-group-btn" uib-dropdown is-open="status.isopen" ng-hide="mySearch.filterVisibility">
-				<button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
-					{{mySearch.filter}} <span class="caret"></span>
-				</button>
-				<ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
-					<li role="menuitem" ng-repeat="filter in mySearch.filters"><a ng-click='mySearch.filterSelected()' ng-model="mySearch.filter">{{filter}} </a></li>
-				</ul>
-			</div>
+			<div ng-dropdown-multiselect="" options="mySearch.filters" selected-model="mySearch.filter" extra-settings="mySearch.Filtersettings"  ng-hide="mySearch.filterVisibility"> </div>
 			<form class="navbar-form navbar-left">
 				<div class="form-group">
 					<input type="text" class="form-control" placeholder="Search">
