--- a/angular/view/search.html
+++ b/angular/view/search.html
@@ -20,6 +20,7 @@
 				<button type="submit" class="btn btn-default">Search</button>
 			</form>
 		</nav>
+		<div><p>{{mySearch.filter}}</p></div>
 
 	</div>
 </div>
