--- a/angular/view/search.html
+++ b/angular/view/search.html
@@ -11,7 +11,7 @@
 					<li role="menuitem"><a ng-click='mySearch.buttonName("Houses")'>Houses</a></li>
 					<li role="menuitem"><a ng-click='mySearch.buttonName("Characters")'>Characters</a></li>
 				</ul>
-				<span ng-dropdown-multiselect="" options="mySearch.filters" selected-model="mySearch.filter" extra-settings="mySearch.Filtersettings"  ng-hide="mySearch.filterVisibility" style="color: black"> </span>
+				<span ng-dropdown-multiselect="" options="mySearch.filters" selected-model="mySearch.filter" extra-settings="mySearch.Filtersettings"  ng-hide="mySearch.filterVisibility" id="filterbtn"> </span>
 				<form class="navbar-form navbar-left">
 					<div class="form-group">
 						<input type="text" class="form-control" placeholder="Search">
