--- a/angular/view/search.html
+++ b/angular/view/search.html
@@ -1,6 +1,6 @@
 <div id="search" ng-controller="searchController as mySearch">
 	<div class="container">
-		<h2>Search : {{mySearch.query}} </h2>
+		<h2>Search : {{mySearch.input}} </h2>
 		<nav class="navbar navbar-inverse" style="display: inline-block;">
 			<div class="input-group-btn" uib-dropdown is-open="status.isopen">
 				<button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
@@ -16,7 +16,7 @@
 					<div class="form-group">
 						<input type="text" class="form-control" placeholder="Search">
 					</div>
-					<button type="submit" class="btn btn-default">Search</button>
+					<button type="submit" class="btn btn-default" ng-click='mySearch.search'>Search</button>
 				</form>
 			</div>
 			
