--- a/angular/view/search.html
+++ b/angular/view/search.html
@@ -11,12 +11,12 @@
 					<li role="menuitem"><a ng-click='mySearch.buttonName("Houses")'>Houses</a></li>
 					<li role="menuitem"><a ng-click='mySearch.buttonName("Characters")'>Characters</a></li>
 				</ul>
-				<span ng-dropdown-multiselect="" options="mySearch.filters" selected-model="mySearch.filter" extra-settings="mySearch.Filtersettings"  ng-hide="mySearch.filterVisibility" id="filterbtn"> </span>
+				<span ng-dropdown-multiselect="" options="mySearch.filters" selected-model="mySearch.filter" extra-settings="mySearch.Filtersettings"  ng-hide="mySearch.filterVisibility" id="filterbtn" ng-click='mySearch.search'> </span>
 				<form class="navbar-form navbar-left">
 					<div class="form-group">
 						<input type="text" class="form-control" placeholder="Search">
 					</div>
-					<button type="submit" class="btn btn-default" ng-click='mySearch.search'>Search</button>
+					<button type="submit" class="btn btn-default">Search</button>
 				</form>
 			</div>
 			
