--- a/angular/view/search.html
+++ b/angular/view/search.html
@@ -11,10 +11,10 @@
 					<li role="menuitem"><a ng-click='mySearch.buttonName("Houses")'>Houses</a></li>
 					<li role="menuitem"><a ng-click='mySearch.buttonName("Characters")'>Characters</a></li>
 				</ul>
-				<span ng-dropdown-multiselect="" options="mySearch.filters" selected-model="mySearch.filter" extra-settings="mySearch.Filtersettings"  ng-hide="mySearch.filterVisibility" id="filterbtn" ng-click='mySearch.search'> </span>
+				<span ng-dropdown-multiselect="" options="mySearch.filters" selected-model="mySearch.filter" extra-settings="mySearch.Filtersettings"  ng-hide="mySearch.filterVisibility" id="filterbtn" ng-click='mySearch.search()'> </span>
 				<form class="navbar-form navbar-left">
 					<div class="form-group">
-						<input type="text" ng-model="mySearch.selected" class="form-control" placeholder="Search" uib-typeahead="result as result.name for result in myHome.search | filter:$viewValue | limitTo:5">
+						<input type="text" ng-model="mySearch.selected" class="form-control" placeholder="Search" uib-typeahead="result as result.name for result in mySearch.search | filter:$viewValue | limitTo:5">
 					</div>
 					<button type="submit" class="btn btn-default">Search</button>
 				</form>
