--- a/angular/view/search.html
+++ b/angular/view/search.html
@@ -21,7 +21,12 @@
 			</div>
 			
 		</nav>
-		<div><p>{{mySearch.filter}}</p></div>
+		<div class="row">
+			<div class="col-12 col-md-3" ng-repeat= "result in mySearch.typeahead | filter: mySearch.selected | limitTo:10">
+				
+			</div>
+			
+		</div>
 
 	</div>
 </div>
