--- a/angular/view/search.html
+++ b/angular/view/search.html
@@ -24,8 +24,7 @@
 		<div class="row">
 			<div class="col-12 col-md-3" ng-repeat= "result in mySearch.typeahead | filter: mySearch.selected | limitTo:10">
 				<a href="#" class="thumbnail">
-					<h5>{{result.name}} </h5>
-					<p>{{result.url}} </p>
+					<h5><span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span>{{result.name}} </h5>
 				</a>
 			</div>
 			
