--- a/angular/view/search.html
+++ b/angular/view/search.html
@@ -22,7 +22,7 @@
 			
 		</nav>
 		<div class="row">
-			<div class="col-12 col-md-3" ng-repeat= "result in mySearch.typeahead | filter: mySearch.selected | limitTo:10">
+			<div class="col-12 col-md-3" ng-repeat= "result in mySearch.typeahead | filter: mySearch.selected | limitTo:10" id="thumbnail">
 				<a href="#" class="thumbnail">
 					<h5><span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span>{{result.name}} </h5>
 				</a>
