--- a/angular/view/search.html
+++ b/angular/view/search.html
@@ -1,34 +1,56 @@
 <div id="search" ng-controller="searchController as mySearch">
-	<div class="container">
-		<h2>Search : {{mySearch.input}} </h2>
-		<nav class="navbar navbar-inverse" style="display: inline-block;">
-			<div class="input-group-btn" uib-dropdown is-open="status.isopen">
-				<button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
-					{{mySearch.action}} <span class="caret"></span>
-				</button>
-				<ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
-					<li role="menuitem"><a ng-click='mySearch.buttonName("Books")'>Books</a></li>
-					<li role="menuitem"><a ng-click='mySearch.buttonName("Houses")'>Houses</a></li>
-					<li role="menuitem"><a ng-click='mySearch.buttonName("Characters")'>Characters</a></li>
+	<div ng-controller="ModalDemoCtrl as modalCtrl" class="modal-demo">
+		<script type="text/ng-template" id="myModalContent.html">
+			<div class="modal-header">
+				<h3 class="modal-title" id="modal-title">I'm a modal!</h3>
+			</div>
+			<div class="modal-body" id="modal-body">
+				<ul>
+					<li ng-repeat="item in modalCtrl.items">
+						<a href="#" ng-click="$event.preventDefault(); modalCtrl.selected.item = item">{{ item }}</a>
+					</li>
 				</ul>
-				<span ng-dropdown-multiselect="" options="mySearch.filters" selected-model="mySearch.filter" extra-settings="mySearch.Filtersettings"  ng-hide="mySearch.filterVisibility" id="filterbtn" ng-click='mySearch.search()'> </span>
-				<form class="navbar-form navbar-left">
-					<div class="form-group">
-						<input type="text" ng-model="mySearch.selected" class="form-control" placeholder="Search" uib-typeahead="result as result.name for result in mySearch.typeahead | filter:$viewValue | limitTo:5">
-					</div>
-					<button type="submit" class="btn btn-default">Search</button>
-				</form>
+				Selected: <b>{{ modalCtrl.selected.item }}</b>
 			</div>
-			
-		</nav>
-		<div class="row">
-			<div class="col-12 col-md-3" ng-repeat= "result in mySearch.typeahead | filter: mySearch.selected | limitTo:10" id="thumbnail">
-				<a href="#" class="thumbnail">
-					<h5><span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span>{{result.name}} </h5>
-				</a>
+			<div class="modal-footer">
+				<button class="btn btn-primary" type="button" ng-click="modalCtrl.ok()">OK</button>
+				<button class="btn btn-warning" type="button" ng-click="modalCtrl.cancel()">Cancel</button>
 			</div>
-			
-		</div>
+		</script>
 
+
+		<div class="container">
+			<h2>Search : {{mySearch.input}} </h2>
+			<nav class="navbar navbar-inverse" style="display: inline-block;">
+				<div class="input-group-btn" uib-dropdown is-open="status.isopen">
+					<button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
+						{{mySearch.action}} <span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+						<li role="menuitem"><a ng-click='mySearch.buttonName("Books")'>Books</a></li>
+						<li role="menuitem"><a ng-click='mySearch.buttonName("Houses")'>Houses</a></li>
+						<li role="menuitem"><a ng-click='mySearch.buttonName("Characters")'>Characters</a></li>
+					</ul>
+					<span ng-dropdown-multiselect="" options="mySearch.filters" selected-model="mySearch.filter" extra-settings="mySearch.Filtersettings"  ng-hide="mySearch.filterVisibility" id="filterbtn" ng-click='mySearch.search()'> </span>
+					<form class="navbar-form navbar-left">
+						<div class="form-group">
+							<input type="text" ng-model="mySearch.selected" class="form-control" placeholder="Search" uib-typeahead="result as result.name for result in mySearch.typeahead | filter:$viewValue | limitTo:5">
+						</div>
+						<button type="submit" class="btn btn-default">Search</button>
+					</form>
+				</div>
+				
+			</nav>
+			<div class="row">
+				<div class="col-12 col-md-3" ng-repeat= "result in mySearch.typeahead | filter: mySearch.selected | limitTo:10" id="thumbnail">
+					<a href="#" class="thumbnail" ng-click="modalCtrl.open()">
+						<h5><span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span>{{result.name}} </h5>
+					</a>
+				</div>
+				
+			</div>
+
+		</div>
 	</div>
+	
 </div>
