--- a/angular/view/search.html
+++ b/angular/view/search.html
@@ -1,20 +1,20 @@
 <div id="search" ng-controller="searchController as mySearch">
-	<div ng-controller="ModaldCtrl as modalCtrl" class="modal-d">
+	<div ng-controller="ModaldCtrl as $ctrl" class="modal-d">
 		<script type="text/ng-template" id="myModalContent.html">
 			<div class="modal-header">
 				<h3 class="modal-title" id="modal-title">I'm a modal!</h3>
 			</div>
 			<div class="modal-body" id="modal-body">
 				<ul>
-					<li ng-repeat="item in modalCtrl.items">
-						<a href="#" ng-click="$event.preventDefault(); modalCtrl.selected.item = item">{{ item }}</a>
+					<li ng-repeat="item in $ctrl.items">
+						<a href="#" ng-click="$event.preventDefault(); $ctrl.selected.item = item">{{ item }}</a>
 					</li>
 				</ul>
-				Selected: <b>{{ modalCtrl.selected.item }}</b>
+				Selected: <b>{{ $ctrl.selected.item }}</b>
 			</div>
 			<div class="modal-footer">
-				<button class="btn btn-primary" type="button" ng-click="modalCtrl.ok()">OK</button>
-				<button class="btn btn-warning" type="button" ng-click="modalCtrl.cancel()">Cancel</button>
+				<button class="btn btn-primary" type="button" ng-click="$ctrl.ok()">OK</button>
+				<button class="btn btn-warning" type="button" ng-click="$ctrl.cancel()">Cancel</button>
 			</div>
 		</script>
 
@@ -43,7 +43,7 @@
 			</nav>
 			<div class="row">
 				<div class="col-12 col-sm-6 col-md-3" ng-repeat= "result in mySearch.typeahead | filter: mySearch.selected | limitTo:10" id="thumbnail">
-					<a class="thumbnail" ng-click="modalCtrl.open()">
+					<a class="thumbnail" ng-click="$ctrl.open()">
 						<h5><span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span>{{result.name}} </h5>
 					</a>
 				</div>
