--- a/angular/view/search.html
+++ b/angular/view/search.html
@@ -2,19 +2,18 @@
 	<div ng-controller="ModaldCtrl as $ctrl" class="modal-d">
 		<script type="text/ng-template" id="myModalContent.html">
 			<div class="modal-header">
-				<h3 class="modal-title" id="modal-title">I'm a modal!</h3>
+				<h3 class="modal-title" id="modal-title">{{$ctrl.data.name}} </h3>
 			</div>
 			<div class="modal-body" id="modal-body">
 				<ul>
-					<li ng-repeat="item in $ctrl.items">
-						<a href="#" ng-click="$event.preventDefault(); $ctrl.selected.item = item">{{ item }}</a>
+					<li ng-repeat="(item, value) in $ctrl.data" ng-show=value>
+						<h6>{{item}} <span><p>{{value}} </p></span></h6>
 					</li>
 				</ul>
 				Selected: <b>{{ $ctrl.selected.item }}</b>
 			</div>
 			<div class="modal-footer">
 				<button class="btn btn-primary" type="button" ng-click="$ctrl.ok()">OK</button>
-				<button class="btn btn-warning" type="button" ng-click="$ctrl.cancel()">Cancel</button>
 			</div>
 		</script>
 
@@ -43,7 +42,7 @@
 			</nav>
 			<div class="row">
 				<div class="col-12 col-sm-6 col-md-3" ng-repeat= "result in mySearch.typeahead | filter: mySearch.selected | limitTo:10" id="thumbnail">
-					<a class="thumbnail" ng-click="$ctrl.open()">
+					<a class="thumbnail" ng-click="$ctrl.open(result.url,mySearch.action)">
 						<h5><span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span>{{result.name}} </h5>
 					</a>
 				</div>
