--- a/angular/view/search.html
+++ b/angular/view/search.html
@@ -41,8 +41,8 @@
 
 			</nav>
 			<div class="row">
-				<div class="col-12 col-sm-6 col-md-3" ng-repeat= "result in mySearch.typeahead | filter: mySearch.selected | limitTo:10" id="thumbnail" ng-click="$ctrl.fetchdata(result.url,mySearch.action)">
-					<a class="thumbnail" ng-click="$ctrl.open()">
+				<div class="col-12 col-sm-6 col-md-3" ng-repeat= "result in mySearch.typeahead | filter: mySearch.selected | limitTo:10" id="thumbnail">
+					<a class="thumbnail" ng-click="$ctrl.fetchdata(result.url,mySearch.action); $ctrl.open()">
 						<h5><span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span>{{result.name}} </h5>
 					</a>
 				</div>
