--- a/angular/view/search.html
+++ b/angular/view/search.html
@@ -13,7 +13,7 @@
 				</ul>
 			</div>
 			<div class="modal-footer">
-				<button class="btn btn-primary" type="button" ng-click="$ctrl.ok()">OK</button>
+				<button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
 			</div>
 		</script>
 
