--- a/angular/view/home.html
+++ b/angular/view/home.html
@@ -15,6 +15,6 @@
 				</ul>
 			</div>
 		</div>
-		<button type="button" class="btn btn-default center-block" ui-sref= 'search({q : myHome.selected.url})' id="searchbtn">Search</button>
+		<button type="button" class="btn btn-default center-block" ui-sref= 'search({q : myHome.selected.url, u : myHome.action})' id="searchbtn">Search</button>
 	</div>
 </div>
