--- a/angular/view/search.html
+++ b/angular/view/search.html
@@ -32,7 +32,7 @@
 					<span ng-dropdown-multiselect="" options="mySearch.filters" selected-model="mySearch.filter" extra-settings="mySearch.Filtersettings"  ng-hide="mySearch.filterVisibility" id="filterbtn" ng-click='mySearch.search()'> </span>
 					<form class="navbar-form navbar-left">
 						<div class="form-group">
-							<input type="text" ng-model="mySearch.selected" class="form-control" placeholder="Search" uib-typeahead="result as result.name for result in mySearch.typeahead | filter:$viewValue | limitTo:5">
+							<input type="search" ng-model="mySearch.selected" class="form-control" placeholder="Search" uib-typeahead="result as result.name for result in mySearch.typeahead | filter:$viewValue | limitTo:5">
 						</div>
 						<button type="submit" class="btn btn-default">Search</button>
 					</form>
