--- a/angular/view/home.html
+++ b/angular/view/home.html
@@ -15,6 +15,6 @@
 				</ul>
 			</div>
 		</div>
-		<button type="button" class="btn btn-default center-block" ui-sref= 'search({u : myHome.action, q : myHome.selected.name})' id="searchbtn">Search</button>
+		<button type="button" class="btn btn-default center-block" ui-sref= 'search({u : myHome.action || "Books", q : myHome.selected.name || ""})' id="searchbtn">Search</button>
 	</div>
 </div>
