--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
 
 .navbar-default {
 	background-color: #244D96;
-	border-color: #244D96;
+    border-color: black;
 	background: url(../img/nav.jpg);
 	background-size: cover;
 }
