--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
 	background-color: black;
-	background: url(../img/nav.jpg);
+	background: url(../img/nav1.jpg);
 	background-repeat: no-repeat;
 }
 
